hphp/hack/test/typecheck/coeffects/ctx_const_constraints.php.exp
File "ctx_const_constraints.php", line 6, characters 3-26:
Constraints on a context constant requires it to be abstract (Parsing[1002])
